--- a/UiMainWindow_Linux.ui
+++ b/UiMainWindow_Linux.ui
@@ -21,8 +21,8 @@
   </property>
   <property name="maximumSize">
    <size>
-    <width>290</width>
-    <height>335</height>
+    <width>500</width>
+    <height>16777215</height>
    </size>
   </property>
   <property name="windowTitle">
